--- a/src/ui/src/app/components/chat/chat.component.html
+++ b/src/ui/src/app/components/chat/chat.component.html
@@ -206,7 +206,7 @@
 
           <!-- File Header -->
           <div class="schema-card-header">
-            <h4>{{ file.filename }}</h4>
+            <!-- <h4>{{ file.filename }}</h4> -->
             <span class="table-name-badge">{{ file.table_name }}</span>
           </div>
 
